--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "Connection": "Data Source=LAPTOP-1P11HHR4\\SQLEXPRESS;Initial Catalog=meulivrodereceitas;User ID=sa;Password=@Password123;TrustServerCertificate=True;"
+  },
+  "Settings": {
+    "Password": {
+      "additionalKey": "WWWWWWWW"
     }
   }
 }
+  
